[gd_scene load_steps=7 format=2]

[ext_resource path="res://src/interface/output_display.gd" type="Script" id=1]
[ext_resource path="res://assets/clipboard.png" type="Texture" id=2]
[ext_resource path="res://assets/fonts/DejaVuSansMono.ttf" type="DynamicFontData" id=3]

[sub_resource type="Theme" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.2, 0.215686, 0.227451, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0, 0, 0, 1 )
border_blend = true

[sub_resource type="DynamicFont" id=3]
size = 14
font_data = ExtResource( 3 )

[node name="OutputDisplay" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = SubResource( 1 )
custom_styles/panel = SubResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 0
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichLabel" type="RichTextLabel" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1024.0
margin_bottom = 595.0
focus_mode = 2
custom_fonts/normal_font = SubResource( 3 )
custom_colors/default_color = Color( 0.870588, 0.866667, 0.854902, 1 )
custom_colors/selection_color = Color( 0.101961, 0.372549, 0.705882, 1 )
custom_constants/line_separation = 7
tab_size = 2
selection_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClipboardButton" type="Button" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -69.1514
margin_top = 4.23785
margin_right = -7.15137
margin_bottom = 60.2379
hint_tooltip = "Save to clipboard"
mouse_default_cursor_shape = 2
icon = ExtResource( 2 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="ClipboardButton" to="." method="_on_ClipboardButton_pressed"]
